tests/errors/byte_buffer_push_nonref.ptt
use std/byte_buffer

touch(b ByteBuffer) {
  b.push(65)
}

spark {
  b is ByteBuffer()
  touch(b)
}
